--- a/style.css
+++ b/style.css
@@ -1,12 +1,48 @@
+* {
+  margin: 0;  
+  padding: 0; 
+}
+nav {
+   width: 100%; 
+   height: 100px;
+   background-color: #325dac;
+   
+}
+ul{
+margin-left: 60px;
+}
+
+ul li {
+list-style: none;
+display: inline-block;
+float: left;
+line-height: 100px;
+}
+
+ul li a {
+display: block;
+text-decoration: none;
+font-size: 14px;
+font-family: Arial, Helvetica, sans-serif;
+color: #1e1e1e;
+padding: 0 40px;
+text-align: left;
+}
+ul li a:hover {
+   color: red;
+    }
+
+
+
 body {
     background-color: powderblue;
     font-size: 20px;
+    padding-bottom: 30px;
   }
   h1{
     text-align: center;
-    padding: 40px;
-    background: #1abc9c;
-    color: white;
+    padding: 35px;
+    color: rgb(29, 24, 66);
     font-size: 30px;
   }
   input[type=text] {
@@ -29,7 +65,26 @@ body {
    background-color: green;
   }
   p{
+
+    color: rgb(39, 36, 36);
+font-family: arial;
+    font-size: large;
+    padding-bottom: 10px;
     text-align: center;
-    color: brown;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: block;
+  
+  }
+  h2 {
+    padding: 5%;
+    text-align: center;
+    color: black;
+  }
+  h3{
+    text-align: center;
+    font-size: larger;
+    padding-bottom: 70px;
+    padding-top: 10px;
+  }
+  hr{
+    padding-bottom: 30px;
   }
